# s3-zip-sample

./: pyproject.toml
s3_zip/: zip.py
