[tool.poetry]
name = "s3-zip"
version = "0.1.0"
description = ""
authors = ["dmabelin <d.mabelin@arcanys.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.34.66"
click = "^8.1.7"

[tool.poetry.scripts]
tt_export_zip = { reference = "s3_zip.zip:cli", type = "console" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

